add env for path

--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -7,6 +7,8 @@ on:
         branches: main
     # Manual trigger
     workflow_dispatch:
+env:
+    frontent_path: ./starter/frontend/
 
 jobs:
     lint-job:
@@ -38,10 +40,10 @@ jobs:
               run: echo "cache miss :("
 
             - name: Install dependencies
-              run: npm install
+              run: npm install env.frontend_path
 
             - name: Build
-              run: npm run lint
+              run: npm run lint env.frontend_path
 
 
 # TEST JOB: There should be a job in the workflow that runs the tests The job should have these steps:
