--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -9,6 +9,7 @@ on:
     workflow_dispatch:
 env:
   frontend_path: ./starter/frontend
+  node_version: '18'
 
 jobs:
     lint-job:
@@ -20,7 +21,7 @@ jobs:
             - name: Setup Nodejs
               uses: actions/setup-node@v4
               with:
-                node-version: '18'
+                node-version: ${{  env.node_version}}
 
             # https://docs.github.com/en/actions/using-workflows/caching-dependencies-to-speed-up-workflows
             - name: Cache node modules
@@ -42,22 +43,67 @@ jobs:
               run: echo "cache miss :("
 
             - name: Install dependencies
+              # change path
               working-directory: ${{ env.frontend_path }}
               run: npm ci
 
             - name: Run lint
+              id: run-lint
               working-directory: ${{ env.frontend_path }}
               run: npm run lint
+            # - if: ${{ steps.run-lint.outputs.cache-hit != 'true' }}
+            #   name: Inform of cache hit
+            #   run: echo "cache miss :("
+    test-job:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
 
+        - name: Setup Nodejs
+          uses: actions/setup-node@v4
+          with:
+            node-version: ${{  env.node_version}}
 
-# TEST JOB: There should be a job in the workflow that runs the tests The job should have these steps:
+        # https://docs.github.com/en/actions/using-workflows/caching-dependencies-to-speed-up-workflows
+        - name: Cache node modules
+          # job id
+          id: cache-npm
+          uses: actions/cache@v3
+          env:
+            cache-name: cache-node-modules
+          with:
+            # npm cache files are stored in `~/.npm` on Linux/macOS
+            path: ~/.npm
+            key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+            restore-keys: |
+                ${{ runner.os }}-build-${{ env.cache-name }}-
+                ${{ runner.os }}-build-
+                ${{ runner.os }}-
+        - if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+          name: Inform of cache hit
+          run: echo "cache miss :("
 
-# Checkout code
-# Setup NodeJS
-# Perform a cache action to restore cache before dependency install
-# Install dependencies
-# Run the npm run test command
-# The two jobs above should run in parallel
+        - name: Install dependencies
+          # change path
+          working-directory: ${{ env.frontend_path }}
+          run: npm ci
+
+        - name: Run test
+          working-directory: ${{ env.frontend_path }}
+          run: npm run test
+
+    build-job:
+      needs: [lint-job, test-job]
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout repository
+          uses: actions/checkout@v4
+
+        - name: Build docker image
+          working-directory: ${{ env.frontend_path }}
+          run: docker build --tag mp-backend:latest .
+
 
 # BUILD JOB: This job should only run after the first 2 succeed (student has to use the "needs" syntax) There should be a step that builds the application using docker. The job should have these steps:
 
