--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -7,11 +7,15 @@
 #     Runs a build job only if the lint and test jobs pass and successfully builds the application
 name: Miro's BE CI
 on:
-    # push to main branch
+    # pull_request to main branch
     pull_request:
         branches: main
     # Manual trigger
     workflow_dispatch:
+    # TODO: this is to speed up development, needs to be commented out before submitting project
+    push:
+        branches:
+            main
 env:
   BACKEND_PATH: ./starter/backend
   PYTHON_VERSION: '3.10'
@@ -49,7 +53,9 @@ jobs:
           uses: actions/setup-python@v4
           with:
             python-version: ${{  env.PYTHON_VERSION}}
-
+        - name: Install pipenv
+          run: pip install pipenv
+          
         - name: Install dependencies
             # change path
           working-directory: ${{ env.BACKEND_PATH }}
