--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -38,6 +38,9 @@ jobs:
               working-directory: ${{ env.BACKEND_PATH }}
               run: pipenv install
 
+            - name: Install pipenv
+              run: pip install pipenv
+    
             - name: Run lint
               id: run-lint
               working-directory: ${{ env.BACKEND_PATH }}
@@ -53,9 +56,10 @@ jobs:
           uses: actions/setup-python@v4
           with:
             python-version: ${{  env.PYTHON_VERSION}}
+        
         - name: Install pipenv
           run: pip install pipenv
-          
+
         - name: Install dependencies
             # change path
           working-directory: ${{ env.BACKEND_PATH }}
