--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -15,7 +15,7 @@ on:
     # TODO: this is to speed up development, needs to be commented out before submitting project
     push:
         branches:
-            mainW
+            main
 env:
   BACKEND_PATH: ./starter/backend
   PYTHON_VERSION: '3.10'
@@ -34,16 +34,16 @@ jobs:
                 python-version: ${{  env.PYTHON_VERSION}}
 
             - name: Install pipenv
-              run: pip install pipenv
+              run: |
+                python -m pip install --upgrade pip
+                pip install pipenv
 
             - name: Install dependencies
               # change path
               working-directory: ${{ env.BACKEND_PATH }}
-              run: pipenv install
+              run: pipenv install --dev
 
-    
             - name: Run lint
-              id: run-lint
               working-directory: ${{ env.BACKEND_PATH }}
               run: pipenv run lint
 
