--- a/starter/frontend/k8s/kustomization.yaml
+++ b/starter/frontend/k8s/kustomization.yaml
@@ -4,3 +4,6 @@ resources:
   - service.yaml
   - deployment.yaml
 namespace: default
+# https://gap.gjensidige.io/docs/guides/ci-automation-with-kustomize
+images:
+- name: frontend
