--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -159,7 +159,11 @@ jobs:
 
       - name: Check k8s config
         run: |
-          aws sts assume-role --role-arn "arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/eks_cluster_role" --role-session-name AWSCLI-Session
+          assume_role_output=$(aws sts assume-role --role-arn "arn:aws:iam::${{ secrets.AWS_ACCOUNT }}:role/eks_cluster_role" --role-session-name AWSCLI-Session | cat)
+          export AWS_ACCESS_KEY_ID=$(echo $assume_role_output | jq -r '.Credentials.AccessKeyId')
+          export AWS_SECRET_ACCESS_KEY=$(echo $assume_role_output | jq -r '.Credentials.SecretAccessKey')
+          export AWS_SESSION_TOKEN=$(echo $assume_role_output | jq -r '.Credentials.SessionToken')
+          export AWS_DEFAULT_REGION="eu-central-1"
           kubectl get svc
       - name: Install kubectl
         uses: azure/setup-kubectl@v3
