--- a/.github/workflows/frontend-cd.yaml
+++ b/.github/workflows/frontend-cd.yaml
@@ -10,9 +10,9 @@ on:
     # Manual trigger
     workflow_dispatch:
     # DONE: this is to speed up development, needs to be commented out before submitting project
-    push:
-        branches:
-            main
+    # push:
+    #     branches:
+    #         main
 env:
   FRONTEND_PATH: ./starter/frontend
   NODE_VERSION: '18'
