--- a/.github/workflows/terraform-infra.yaml
+++ b/.github/workflows/terraform-infra.yaml
@@ -34,7 +34,8 @@ jobs:
           aws sts get-caller-identity
 
       - uses: hashicorp/setup-terraform@v3
-
+        with:
+          terraform_version: "1.7.1"
       - run: terraform init
 
       - run: terraform apply --auto-approve
