--- a/.github/workflows/terraform-infra.yaml
+++ b/.github/workflows/terraform-infra.yaml
@@ -37,5 +37,5 @@ jobs:
         with:
           terraform_version: "1.7.1"
       - run: terraform init
-
+      - run: terraform destroy --auto-approve
       - run: terraform apply --auto-approve
